# jtime

./: .gitignore  Cargo.toml  README.md  install.sh  release.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  config.rs  main.rs  models.rs
src/api/: client.rs  jira.rs  mod.rs  nager.rs
src/cache/: mod.rs
src/commands/: add.rs  config.rs  log.rs  mod.rs  month.rs  update.rs  week.rs
src/view/: helper.rs  mod.rs  render.rs
