[package]
name = "jtime"
version = "0.1.11"
edition = "2021"


[dependencies]
anyhow = "1.0.98"
chrono = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
cli-table = "0.5.0"
colored = "3.0.0"
dialoguer = "0.11.0"
regex = "1.11.1"
reqwest = { version = "0.12.16", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
tempfile = "3.20"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size over speed
codegen-units = 1  # Reduce parallel code generation for better optimization
panic = "abort"  # Removes panic unwinding code
